# sample-agent-assisted-sdlc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY-PRACTICES.md  cdk.json  package-lock.json  package.json  ruff.toml  sdlc-config.template.yaml  tsconfig.json
.ash/: .ash.yaml
.github/: dependabot.yml
.github/workflows/: agent-start.yml  ash-daily.yml  ash-security-scan.yml  ci.yml  claude.yml  secret-scan.yml
coding-assistants/: README.md
coding-assistants/claude-code/: obs.md
coding-assistants/claude-code/runtime/: .dockerignore  Dockerfile  main.py  otel-collector-config.yaml  pyproject.toml  test_main.py
gateway/: README.md
gateway/developer-mcp-servers/cfn-docs/: main.py  pyproject.toml
gateway/gateway-iam-proxy/: index.js  package-lock.json  package.json
lib/: config.ts  sdlc-stack.ts  utils.ts
lib/constructs/: index.ts
lib/nested/: agentcore-policy-stack.ts  assistant-stack.ts  developer-mcp-stack.ts  gateway-stack.ts  infrastructure-stack.ts  policies-stack.ts  project-management-stack.ts  source-control-stack.ts
project-management/: README.md
project-management/github/: README.md
project-management/shared/: README.md  errors.py  invoke_pipeline.py  pipeline.py
source-control/: README.md
source-control/github/: README.md
test/: config.test.ts
test-scripts/claude-code/: test-gateway.sh  test-github-repo.sh  test-orchestrator-complex.sh  test-orchestrator-reinvoke.sh  test-orchestrator-simple.sh  test-otel-diagnostic.sh  test-security-hooks.sh
test/hooks/: test_hooks.sh
(+65 files in other folders)
