[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudecode-runtime"
version = "0.1.0"
description = "AgentCore Runtime container for Claude Code"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro>=0.10.0",
    "boto3",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "fastapi",
    "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
